type export fix

--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   ],
   "main": "./dist/react-audio-visualize.umd.js",
   "module": "./dist/react-audio-visualize.es.js",
-  "types": "./dist/index.d.ts",
+  
   "exports": {
     ".": {
       "import": "./dist/react-audio-visualize.es.js",
-      "require": "./dist/react-audio-visualize.umd.js"
+      "require": "./dist/react-audio-visualize.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
