--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.ts{,x}",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
