--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src/**/*.ts{,x}",
-    "lint:fix": "npm run lint -- --fix",
-    "prepare": "npm run build"
+    "lint:fix": "npm run lint -- --fix"    
   },
   "devDependencies": {
     "@types/node": "^20.2.1",
